mais um comentário

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <!--
- Estou testando este software e aprendendo git
+ Estou testando este software e aprendendo git hub
 -->
 <html>
 	<head>
