fiz merdas e vou testar

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <!--
  Estou testando este software e aprendendo git hub
  Gostou das modificações?
+ Thiago Bonfim
+No Alto daquele cume
 -->
 <html>
 	<head>
